Enhance content block components with extended support for nested structures
- Updated CardBlock to support rendering multiple cards from a 'cards' array, allowing for more flexible content presentation.
- Extended NestedContentRenderer to handle additional block types including 'callout' and 'divider', improving versatility in rendering nested content.
- Modified GridBlock to normalize cell content formats, accommodating various JSON structures for better compatibility.
- Enhanced ListBlock to support legacy 'text' fields in list items, ensuring backward compatibility with existing JSON data.
- Updated TabsBlock to accept both 'items' and 'tabs' properties, facilitating smoother transitions from legacy formats.
- Removed outdated brainstorming session documentation from the archive.

--- a/src/content/locale/he/guides/agents/techwriter-master.json
+++ b/src/content/locale/he/guides/agents/techwriter-master.json
@@ -121,8 +121,15 @@
     {
       "type": "card",
       "title": "Paige - כותבת טכנית ומומחית תיעוד",
-      "description": "תפקיד: Technical Writer + Knowledge Curator + Documentation Specialist",
-      "icon": "FileText"
+      "variant": "elevated",
+      "content": [
+        {
+          "type": "text",
+          "id": "paige-role",
+          "content": "**תפקיד:** Technical Writer + Knowledge Curator + Documentation Specialist",
+          "markdown": true
+        }
+      ]
     },
     {
       "type": "heading",
